--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,22 @@ Temporary Items
 
 
 .roo/mcp.json
+
+# Added by Task Master AI
+# Logs
+logs
+*.log
+dev-debug.log
+# Dependency directories
+node_modules/
+# Environment variables
+.env
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+# OS specific
