--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -26,11 +26,11 @@ services:
     command: yarn dev
     volumes:
       - ./frontend:/app
-      - /app/node_modules
-      - /app/.next
+      - frontend_node_modules:/app/node_modules
     # depends_on:
     #   - api-backend
     env_file:
       - ./frontend/.env.dev
 volumes:
+  frontend_node_modules:
   supabase-data:
