--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -47,6 +47,16 @@ services:
       - localstack_data:/var/lib/localstack
       - /var/run/docker.sock:/var/run/docker.sock
 
+  dynamodb-admin:
+    image: aaronshaf/dynamodb-admin:latest
+    ports:
+      - "8001:8001"
+    depends_on:
+      - localstack
+    environment:
+      DYNAMO_ENDPOINT: localstack:4566
+    init: true
+
 volumes:
   frontend_node_modules:
   localstack_data:
