--- a/backend/.env.dev
+++ b/backend/.env.dev
@@ -6,3 +6,5 @@ AWS_SECRET_ACCESS_KEY=test
 DYNAMODB_ENDPOINT=http://localstack:4566
 DYNAMODB_TABLE=WavyBlog
 JWT_SECRET=my-super-secret-key
+JWT_ACCESS_TOKEN_EXPIRES_IN=3600
+JWT_REFRESH_TOKEN_EXPIRES_IN=1209600
