connect api from frontend to backend

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -54,7 +54,10 @@ services:
     depends_on:
       - localstack
     environment:
-      DYNAMO_ENDPOINT: localstack:4566
+      - DYNAMO_ENDPOINT=http://localstack:4566
+      - AWS_REGION=us-east-1
+      - AWS_ACCESS_KEY_ID=test
+      - AWS_SECRET_ACCESS_KEY=test
     init: true
 
 volumes:
