upload images to minio

--- a/backend/.env.dev
+++ b/backend/.env.dev
@@ -8,3 +8,11 @@ DYNAMODB_TABLE=WavyBlog
 JWT_SECRET=my-super-secret-key
 JWT_ACCESS_TOKEN_EXPIRES_IN=3600
 JWT_REFRESH_TOKEN_EXPIRES_IN=1209600
+
+# Storage Configuration
+STORAGE_TYPE=minio
+STORAGE_ENDPOINT=minio:9000
+STORAGE_ACCESS_KEY=minioadmin
+STORAGE_SECRET_KEY=minioadmin123
+STORAGE_BUCKET=wavybucket
+STORAGE_USE_SSL=false
