--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -60,6 +60,21 @@ services:
       - AWS_SECRET_ACCESS_KEY=test
     init: true
 
+  # MinIO Service for S3 Compatible Storage
+  minio:
+    image: quay.io/minio/minio:latest
+    container_name: minio
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    environment:
+      - MINIO_ROOT_USER=minioadmin
+      - MINIO_ROOT_PASSWORD=minioadmin123
+    volumes:
+      - minio_data:/data
+    command: server /data --console-address ":9001"
+
 volumes:
   frontend_node_modules:
   localstack_data:
+  minio_data:
